--- a/index_styles.css
+++ b/index_styles.css
@@ -18,17 +18,20 @@ nav{
 .media{
   display: flex;
   flex-direction: row;
-  margin-left: 75%;
-  padding-top: 0px;
+  margin-left: 76%;
+  padding-top: 15px;
+  margin-top: 0px;
+
 
 }
+/* Social Media links style */
 .fa {
   padding: 10px;
-  font-size: 15px;
-  width: 15px;
+  font-size: 25px;
+  width: 12px;
   text-align: center;
   text-decoration: none;
-  border-radius: 50%;
+  border-radius: 65%;
 
 }
 
@@ -36,27 +39,31 @@ nav{
 .fa-facebook {
   background: #3B5998;
   color: white;
+  margin-left: 7px;
 }
 
 /* Twitter */
 .fa-twitter {
   background: #55ACEE;
   color: white;
+  margin-left: 7px;
 }
 
 /* Instagram */
 .fa-instagram {
-  background: #55ACEE;
+  background: #833AB4;
   color: white;
+  margin-left: 7px;
 }
 
 
 /* logo */
 .logo {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   float: left;
-  padding-top: 15px;
+  padding-top: 0px;
+  margin-top: -10px;
   margin-left: 25%;
   display: flex;
   flex-direction: row;
@@ -64,23 +71,16 @@ nav{
 /* Header --Sports */
 h1 {
   font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 72px;
   color: #E0E0E0;
-  margin-top: 0px;
-  padding-top: 15px;
+  margin-top: -10px;
+  padding-top: 0px;
   display: flex;
   flex-direction: row;
   margin-left: 35%;
   width: 50%;
-
 }
-
-nav ul {
-  list-style-type: none;
-
- }
-
 
 /* Nav bar text */
 nav ul {
@@ -92,8 +92,7 @@ nav ul {
   text-align: center;
   display: inline-block;
   vertical-align: top;
-  margin-top: -25px;
-
+  margin-top: -42px;
 }
 
 nav li {
@@ -113,7 +112,7 @@ nav li a {
 
 /* Add a gray right border to all list items, except the last item (last-child) */
 li {
-  border-right: 1px solid #bbb;
+  border-right: 1.5px solid #bbb;
 }
 
 li:last-child {
