--- a/index_styles.css
+++ b/index_styles.css
@@ -125,3 +125,6 @@ nav li a:hover {
 }
 
 /* End Nav Bar text */
+footer .nav{
+   background: linear-gradient(to Bottom, #33ccff 0%, #ff99cc 100%)
+}
