--- a/events_styles.css
+++ b/events_styles.css
@@ -1,4 +1,4 @@
-*{
+{
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
 
@@ -125,3 +125,18 @@ nav li a:hover {
 }
 
 /* End Nav Bar text */
+/* Start of Body*/
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 55px;
+  color: black;
+  text-align: center;
+}
+
+h3{
+  font-family: 'Roboto', sans-serif;
+  font-size: 40px;
+  color: black;
+  text-align: center;
+}
