--- a/index_styles.css
+++ b/index_styles.css
@@ -145,7 +145,7 @@ nav li a:hover {
 }
 
 
-h2{
+.intro{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 30px;
@@ -163,8 +163,7 @@ p{
   color: #E0E0E0;
   margin-left: 8%;
   width: 40%;
-  display: flex;
-  flex-direction: row;
+
 
 }
 
@@ -185,6 +184,169 @@ p{
   margin-top: -75px;
 
 }
+
+/* Backround for lend of month */
+.month{
+  background-color: black;
+  height: 700px;
+  width: 100%;
+}
+
+/* leg of month header */
+.month_intro{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: white;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: row;
+  text-decoration: underline;
+}
+
+/* leg of month photo */
+.month_photo{
+  width: 679px;
+  height: 424px;
+  border: 4px solid white;
+  margin-left: 4%;
+  display: flex;
+  flex-direction: row;
+}
+
+/* photo caption - ron */
+.month_title{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 30px;
+  color: #E0E0E0;
+  margin-left: 4%;
+  width: 40%;
+
+}
+
+/* About ron blurb */
+.month_about{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  color: #E0E0E0;
+  margin-left: 65%;
+  margin-top: -435px;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+}
+
+/* join us section backround */
+.join{
+  background-color: black;
+  height: 300px;
+  width: 100%;
+}
+
+
+/* Join our mission */
+.join_title{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  text-decoration: underline;
+  margin-left: 40%;
+}
+
+/* Why join us blurb */
+.join_blurb{
+text-align: center;
+margin-left: 30%;
+
+}
+
+/* Why join us button */
+.join_button{
+  background-color: #C13C3C; /* Red */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  width: 265px;
+  font-size: 25px;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-left: 37%;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+}
+
+/* info backround*/
+.info{
+  background-color: black;
+  height: 700px;
+  width: 100%;
+
+}
+
+/* info title*/
+.info_title{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: white;
+  text-decoration: underline;
+  float: right;
+}
+
+/* info section heads */
+.info_subtitle{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
+.info_blurb{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: white;
+  width: 30%;
+  text-align: center;
+
+}
+
+.one_info{
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+
+}
+
+.two_info{
+  display: flex;
+  flex-direction: row;
+width: 40%;
+}
+
+.three_info{
+  display: flex;
+  flex-direction: row;
+width: 40%;
+}
+
+.four_info{
+  display: flex;
+  flex-direction: row;
+width: 40%;
+}
+
+
+
+
 
 /*
 .button{
