--- a/index_styles.css
+++ b/index_styles.css
@@ -127,6 +127,9 @@ nav li a:hover {
 /* End Nav Bar text */
 
 /* Hero Image */
+.hero_image{
+  width: 100%;
+}
 
 
 /* project */
@@ -300,6 +303,21 @@ margin-left: 30%;
   float: right;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* info section heads */
 .info_subtitle{
   font-family: 'Roboto', sans-serif;
@@ -307,6 +325,8 @@ margin-left: 30%;
   font-size: 30px;
   color: white;
   text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .info_blurb{
@@ -316,6 +336,8 @@ margin-left: 30%;
   color: white;
   width: 30%;
   text-align: center;
+  display: flex;
+  flex-direction: row;
 
 }
 
@@ -329,20 +351,118 @@ margin-left: 30%;
 .two_info{
   display: flex;
   flex-direction: row;
-width: 40%;
+  width: 40%;
+  margin-left: 50%;
 }
 
 .three_info{
   display: flex;
   flex-direction: row;
-width: 40%;
+  width: 40%;
 }
 
 .four_info{
   display: flex;
   flex-direction: row;
-width: 40%;
+  width: 40%;
 }
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
 
 
 
