--- a/about_styles.css
+++ b/about_styles.css
@@ -125,3 +125,32 @@ nav li a:hover {
 }
 
 /* End Nav Bar text */
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  font-weight: lighter;
+  max-width: 500px;
+  color: white;
+}
+
+p {
+  max-width:500px;
+  align-content: flex-start;
+  color: white;
+}
+
+.bottom_1 hr {
+  max-width: 600px;
+  margin-right: 1075px;
+  margin-top: -30px;
+  color: white;
+}
+
+.top iframe{
+margin-left: 75px;
+}
+
+html {
+  background-color: black;
+}
