--- a/about_styles.css
+++ b/about_styles.css
@@ -151,6 +151,15 @@ p {
 margin-left: 75px;
 }
 
+.top h4{
+  font-family: 'Roboto', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  color: red;
+  display:inline-block;
+  margin-left: 1000px;
+}
+
 html {
   background-color: black;
 }
