--- a/index_styles.css
+++ b/index_styles.css
@@ -1,8 +1,3 @@
-*{
-  font-size: 18px;
-  font-family: 'Roboto', sans-serif;
-
-}
 
 body{
   margin: 0000;
@@ -111,6 +106,8 @@ nav li a {
   text-decoration: none;
   padding-left: 32px;
   padding-right: 32px;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* Add a gray right border to all list items, except the last item (last-child) */
@@ -148,7 +145,7 @@ nav li a:hover {
 .intro{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  font-size: 30px;
+  font-size: 40px;
   color: #E0E0E0;
   margin-left: 8%;
   padding-top: 30px;
@@ -160,7 +157,7 @@ nav li a:hover {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 15px;
-  color: #E0E0E0;
+  color: white;
   margin-left: 8%;
   width: 40%;
 
@@ -172,13 +169,15 @@ nav li a:hover {
   border: none;
   color: white;
   padding: 15px 32px;
-  width: 100px;
+  width: 150px;
   font-size: 25px;
   border-radius: 10px;
   text-align: center;
   text-decoration: none;
   margin-left: 75%;
   margin-top: -75px;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
 
 }
 
@@ -199,7 +198,10 @@ nav li a:hover {
   padding-top: 30px;
   display: flex;
   flex-direction: row;
-  text-decoration: underline;
+  border-bottom: 2px solid white;
+  display: inline-block;
+  padding-left: 30px;
+
 }
 
 /* leg of month photo */
@@ -227,7 +229,7 @@ nav li a:hover {
 .month_about{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 15px;
   color: #E0E0E0;
   margin-left: 65%;
   margin-top: -435px;
@@ -241,7 +243,6 @@ nav li a:hover {
   background-color: black;
   height: 300px;
   width: 100%;
-  margin-top: -40px;
 }
 
 
@@ -251,16 +252,19 @@ nav li a:hover {
   font-weight: 300;
   font-size: 40px;
   color: white;
-  display: flex;
-  flex-direction: row;
-  text-decoration: underline;
-  margin-left: 40%;
+   border-bottom: 2px solid white;
+   margin: 0 auto;
+   padding-left: 30px;
+   text-align: center;
+   margin: 0em 25%;
 }
 
 /* Why join us blurb */
 .join_blurb{
 text-align: center;
 font-family: 'Roboto', sans-serif;
+font-weight: 300;
+font-size: 15px;
 color: white;
 width: 50%;
 margin-left: 25%;
@@ -283,6 +287,8 @@ margin-left: 25%;
   text-decoration: none;
   display: flex;
   flex-direction: row;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* info backround*/
@@ -290,7 +296,15 @@ margin-left: 25%;
   background-color: black;
   height: 700px;
   width: 100%;
+  overflow: visible;
+  padding-top: .75em;
+  position: relative;
 
+
+}
+
+.more_info_div{
+  min-height: 5em;
 }
 
 /* info title*/
@@ -299,7 +313,15 @@ margin-left: 25%;
   font-weight: 300;
   font-size: 40px;
   color: white;
-  text-decoration: underline;
+  background-color: black;
+  margin-top: 0;
+  border-bottom: 2px solid white;
+  text-align: right;
+  padding-right: 550px;
+  display: inline-block;
+  position: absolute;
+  right: 0px;
+
 
 }
 
