--- a/legends_styles.css
+++ b/legends_styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: #232323;
 }
 
 /* Nav styles */
@@ -126,7 +126,7 @@ nav li a:hover {
 .content_area {
   width: 100%;
   height: 900px;
-  background-color: black;
+
 }
 
 /*Basic Text*/
@@ -149,6 +149,7 @@ nav li a:hover {
   margin-left: 43%;
   flex-direction: row;
   display: flex;
+  box-shadow: 10px 10px 5px black;
 }
 
 /* Collapsible Sections */
@@ -212,6 +213,7 @@ section {
   height:200px;
   width:200px;
   margin: 0 auto;
+  box-shadow: 5px 5px 5px black;
 
 }
 
