--- a/legends_styles.css
+++ b/legends_styles.css
@@ -146,10 +146,10 @@ nav li a:hover {
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  margin-left: 43%;
   flex-direction: row;
   display: flex;
   box-shadow: 10px 10px 5px black;
+  margin:auto;
 }
 
 /* Collapsible Sections */
