--- a/index_styles.css
+++ b/index_styles.css
@@ -1,6 +1,7 @@
 
 body{
   margin: 0000;
+  background-color: #232323;
 }
 
 /* Nav styles */
@@ -135,7 +136,7 @@ nav li a:hover {
 /* project */
 
 .project{
-  background-color: black;
+
   height: 300px;
   width: 100%;
   margin-top: -40px;
@@ -178,12 +179,13 @@ nav li a:hover {
   margin-top: -75px;
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
+  box-shadow: 10px 10px 5px black;
 
 }
 
 /* Backround for lend of month */
 .month{
-  background-color: black;
+
   height: 700px;
   width: 100%;
   margin-top: -40px;
@@ -229,18 +231,18 @@ nav li a:hover {
 .month_about{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  font-size: 15px;
+  font-size: 18px;
   color: #E0E0E0;
-  margin-left: 65%;
+  margin-left: 60%;
   margin-top: -435px;
-  width: 30%;
+  width: 32%;
   display: flex;
   flex-direction: row;
 }
 
 /* join us section backround */
 .join{
-  background-color: black;
+
   height: 300px;
   width: 100%;
 }
@@ -252,11 +254,11 @@ nav li a:hover {
   font-weight: 300;
   font-size: 40px;
   color: white;
-   border-bottom: 2px solid white;
-   margin: 0 auto;
-   padding-left: 30px;
-   text-align: center;
-   margin: 0em 25%;
+  border-bottom: 2px solid white;
+  margin: 0 auto;
+  padding-left: 30px;
+  text-align: center;
+  margin: 0em 25%;
 }
 
 /* Why join us blurb */
@@ -278,22 +280,21 @@ margin-left: 25%;
   border: none;
   color: white;
   padding: 15px 32px;
-  width: 265px;
+  width: 255px;
   font-size: 25px;
   border-radius: 10px;
   margin-top: 50px;
   margin-left: 40%;
   text-align: center;
   text-decoration: none;
-  display: flex;
-  flex-direction: row;
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
+  box-shadow: 10px 10px 5px black;
 }
 
 /* info backround*/
 .info{
-  background-color: black;
+
   height: 700px;
   width: 100%;
   overflow: visible;
@@ -313,7 +314,6 @@ margin-left: 25%;
   font-weight: 300;
   font-size: 40px;
   color: white;
-  background-color: black;
   margin-top: 0;
   border-bottom: 2px solid white;
   text-align: right;
@@ -321,9 +321,9 @@ margin-left: 25%;
   display: inline-block;
   position: absolute;
   right: 0px;
-
-
+  margin-bottom: 30px;
 }
+
 
 /* info section heads */
 .big_info{
@@ -335,10 +335,16 @@ margin-left: 25%;
 
 
 .info_subtitle{
-  font-family: 'Roboto', sans-serif;
-  font-size: 30px;
+
   color: white;
   text-align: center;
+
+}
+.info_subtitle h3{
+  margin-top: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: 400;
 
 }
 
@@ -346,34 +352,58 @@ margin-left: 25%;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   color: white;
-  width: 30%;
   text-align: center;
+  margin: 0 20px;
+  padding-bottom: 15px;
+  font-weight: 300;
+
 
 }
 
+.info_button{
+  background-color: #C13C3C; /* Red */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  width: 125px;
+  font-size: 25px;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin: 0 auto;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 10px 10px 5px black;
+}
 
 .one_info{
   width: 40%;
-  background-color: red;
-
+  margin-left: 10%;
+  padding: 5px;
+  border-right: 2px solid white;
 
 }
 
 .two_info{
   width: 40%;
-  background-color: blue;
+  padding: 5px;
 
 }
 
 .three_info{
   width: 40%;
-  background-color: green;
+  margin-left: 10%;
+  padding: 5px;
+  padding-top: 40px;
+  border-right: 2px solid white;
 
 }
 
 .four_info{
   width: 40%;
-  background-color: teal;
+  padding: 5px;
+  padding-top: 40px;
 
 }
 
@@ -387,15 +417,16 @@ margin-left: 25%;
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  background-color: black;
+
   position: relative;
   margin: auto;
-  background-color: black;
+
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+
 }
 
 /* Next & previous buttons */
@@ -408,7 +439,7 @@ margin-left: 25%;
   padding: 16px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 30px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -427,8 +458,9 @@ margin-left: 25%;
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  color: white;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -478,30 +510,3 @@ margin-left: 25%;
   from {opacity: .4}
   to {opacity: 1}
 }
-
-
-
-
-
-
-/*
-.button{
-  width: 180px;
-  height: 64px;
-  background-color:#C13C3C;
-  border-radius: 25px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-size: 25px;
-  color: #E0E0E0;
-  text-align: center;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  display: flex;
-  flex-direction: row;
-  margin-left: 70%;
-  margin-top: -80px;
-
-}
-*/
