--- a/legends_styles.css
+++ b/legends_styles.css
@@ -38,6 +38,7 @@ body {
   display: flex;
   box-shadow: 10px 10px 5px black;
   margin:auto;
+  text-decoration: none;
 }
 
 /* Collapsible Sections */
