--- a/about_styles.css
+++ b/about_styles.css
@@ -4,6 +4,9 @@
 
 }
 
+body {
+  margin: 0px;
+}
 
 /* Nav styles */
 
@@ -111,9 +114,7 @@ nav li a {
 }
 
 /* Add a gray right border to all list items, except the last item (last-child) */
-li {
-  border-right: 1.5px solid #bbb;
-}
+
 
 li:last-child {
   border-right: none;
@@ -126,40 +127,281 @@ nav li a:hover {
 
 /* End Nav Bar text */
 
-h2 {
+.texthead h2 {
+  display:inline-flex;
+  padding-left: 35px;
   font-family: 'Roboto', sans-serif;
   font-size: 35px;
   font-weight: lighter;
+  color: white;
+  width: 700px;
+}
+
+.texthead p {
+  max-width:500px;
+  align-content: flex-start;
+  color: white;
+  padding:0 35px;
   max-width: 500px;
+}
+
+.texthead {
+  flex: 1;
+}
+
+.text_bloc h2 {
+  display:inline-block;
+  border-bottom: 1px solid white;
+  padding-left: 35px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  font-weight: lighter;
   color: white;
 }
 
-p {
+.text_bloc p {
   max-width:500px;
   align-content: flex-start;
+  color: white;
+  padding:0 35px;
+}
+
+.bottom_1 h2 {
+  display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  font-weight: lighter;
+  max-width: 350px;
+  color: white;
+  margin-left: 55px;
+}
+
+.stats li{
+  font-family: 'Roboto', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  word-spacing: 50px;
+  color: #C85151;
+  align-items: center;
+  display:inline-flex;
+  border-right: 1px solid white;
+  width: 100px;
+  padding-left: 23px;
+}
+
+.numbers {
+  flex: 1;
+  padding-left: 200px;
+}
+
+.captions p {
+  text-align: center;
+  font-weight:lighter;
+  display: inline-flex;
+  color: white;
+  font-size: 10px;
+}
+
+.captions {
+  margin-top: -30px;
+}
+
+.call_to_action button {
+  padding: 10px;
+  text-align: center;
+  display: block;
+  color: white;
+  background-color: #C85151;
+  margin-top: 20px;
+}
+
+.call_to_action {
+  display: inline-block;
+  padding-left: 100px;
+  padding-top: 50px;
+}
+
+.top {
+  display: flex;
+  padding-bottom: 175px;
+}
+
+  iframe{
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+}
+
+.bottom_2 h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  font-weight: lighter;
+  max-width: 350px;
+  border-bottom: 1px solid white;
   color: white;
 }
 
 .bottom_1 hr {
-  max-width: 600px;
-  margin-right: 1075px;
-  margin-top: -30px;
+  max-width: 400px;
+  margin-right: 1029px;
+  margin-top: -35px;
   color: white;
 }
 
-.top iframe{
-margin-left: 75px;
-}
+  .jointeam h2{
+    display:inline-block;
+    border-bottom: 1px solid white;
+    padding-left: 35px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 35px;
+    font-weight: lighter;
+    color: white;
+    flex: 1;
+  }
 
-.top h4{
+  .jointeam p {
+    max-width:500px;
+    align-content: flex-start;
+    color: white;
+    padding:0 35px;
+  }
+
+.opps {
   font-family: 'Roboto', sans-serif;
   font-size: 40px;
   font-weight: bold;
   color: red;
   display:inline-block;
-  margin-left: 1000px;
-}
+  flex: 1;
+  padding-top: 25px;
+  padding-left: 175px;
+  }
+
+  .opps h2 {
+    font-size: 22px;
+    color: #C85151;
+  }
 
 html {
   background-color: black;
+}
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  width: 500px;
+  position: relative;
+  margin: auto;
+  padding-top: 25px;
+
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+.bottom_container, .bottom_container2 {
+  display: flex;
+}
+
+.bottom_container{
+  padding-top: 50px;
+}
+
+.text_bloc {
+  flex: 1;
+}
+
+.bottom_carousel {
+  flex: 1;
+  padding-right: 40px;
+  padding-bottom: 0px;
+}
+
+.jointeam {
+  flex: 1;
 }
