Finished events page

--- a/events_styles.css
+++ b/events_styles.css
@@ -1,12 +1,16 @@
-{
-  font-size: 18px;
+*{
   font-family: 'Roboto', sans-serif;
 
 
 }
+body{
+  background-color: #232323;
+  margin: 0px;
+}
 
 header{
   background-color: black;
+  padding-bottom: 10px;
 }
 /* Nav styles */
 
@@ -60,18 +64,31 @@ nav{
 
 .title{
   display: flex;
+  margin-bottom: 10px;
 
 }
 .title-item {
   flex:1;
+
 }
 .title-item-grow {
   flex-grow:1;
+  Display: row;
+  display:flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+
+
 }
 /* logo */
 .logo {
  max-width: 90px;
  display:inline-block;
+ padding-right: 20px;
+
+
+
 
   /*test
   width: 90px;
@@ -86,6 +103,7 @@ nav{
 }
 .logo img{
   width: 100%;
+
 }
 /* Header --Sports */
 h1 {
@@ -93,9 +111,8 @@ h1 {
   font-weight: 300;
   font-size: 72px;
   color: #E0E0E0;
-  margin-top: -10px;
+  margin: 0px;
   padding-top: 0px;
-  display: flex;
   flex-direction: row;
   display:inline-block;
   /*flex-grow: 1;
@@ -113,7 +130,7 @@ nav ul {
   text-align: center;
   display: inline-block;
   vertical-align: top;
-  margin-top: -42px;
+
 }
 
 nav li {
@@ -147,9 +164,7 @@ nav li a:hover {
 
 /* End Nav Bar text */
 /* Start of Body*/
-body{
-  background-color: black;
-}
+
 h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 55px;
@@ -168,17 +183,21 @@ h3{
 
 .largemedia{
   display: flex;
-  max-width: 300px;
+  max-width: 420px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 
 }
+.largemedia div {
+  margin-left: 10px;
+  margin-right: 10px;
+}
 .icon div:first-child{
-  margin-left: 0px;
+  margin-left: 5px;
 }
 .icon div:last-child{
-  margin-right: 0px;
+  margin-right: 5px;
 }
 .icon > div{
   flex:1;
@@ -191,12 +210,14 @@ h3{
   overflow: hidden;
   flex: 1;
 
+
 }
 
 .icon img{
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  box-shadow: 10px 10px 5px black;
 }
 
 
@@ -231,7 +252,9 @@ button{
   text-decoration: none;
   display: block;
   font-size: 35px;
-  margin-left: 40%;
+  margin: auto;
+  flex-direction: row;
+  box-shadow: 10px 10px 5px black;
 
 }
 .people{
@@ -278,12 +301,28 @@ p{
 
 
 
-.footer{
-  padding-top: auto;
+.footercolor{
+  background-color: black;
+  padding-bottom: 10px;
+  }
 
-}
 @media screen and (max-width: 630px){
   h1 {
     font-size: 48px;
+  }
+  nav ul {
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+
+  }
+  nav ul li{
+    text-align: center;
+
   }
 }
