--- a/about_styles.css
+++ b/about_styles.css
@@ -31,11 +31,9 @@ nav{
 .fa {
   padding: 10px;
   font-size: 25px;
-  width: 12px;
   text-align: center;
   text-decoration: none;
-  border-radius: 65%;
-
+  border-radius: 50%;
 }
 
 /* Facebook */
@@ -43,6 +41,7 @@ nav{
   background: #3B5998;
   color: white;
   margin-left: 7px;
+  width: 35px;
 }
 
 /* Twitter */
@@ -213,6 +212,7 @@ nav li a:hover {
   color: white;
   background-color: #C85151;
   margin-top: 20px;
+  border: none;
 }
 
 .call_to_action {
