--- a/about_styles.css
+++ b/about_styles.css
@@ -213,6 +213,7 @@ nav li a:hover {
   background-color: #C85151;
   margin-top: 20px;
   border: none;
+  box-shadow: 10px 10px 5px black;
 }
 
 .call_to_action {
@@ -284,19 +285,24 @@ nav li a:hover {
   }
 
 html {
-  background-color: black;
+  background-color: #232323;
 }
 
 * {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
-  width: 500px;
+  width: 300px;
   position: relative;
   margin: auto;
   padding-top: 25px;
-
 }
+
+.slideshow-container img {
+  width: 300px;
+  height: 400px;
+}
+
 
 /* Hide the images by default */
 .mySlides {
