--- a/legends_styles.css
+++ b/legends_styles.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: #232323;
+  margin: 0px;
 }
 
 header{
@@ -286,6 +287,7 @@ h2 {
 .footercolor{
   background-color: black;
   padding-bottom: 10px;
+  padding-top:20px;
   }
 
 @media screen and (max-width:  720px) {
