--- a/about_styles.css
+++ b/about_styles.css
@@ -8,10 +8,13 @@ body {
   margin: 0px;
 }
 
+header{
+  background-color: black;
+  padding-bottom: 10px;
+}
 /* Nav styles */
 
 nav{
-  height: 225px;
   width: 100%;
   text-align: center;
   background-color: black;
@@ -34,6 +37,7 @@ nav{
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
+
 }
 
 /* Facebook */
@@ -41,7 +45,7 @@ nav{
   background: #3B5998;
   color: white;
   margin-left: 7px;
-  width: 35px;
+  width: 40px;
 }
 
 /* Twitter */
@@ -58,9 +62,35 @@ nav{
   margin-left: 7px;
 }
 
+.title{
+  display: flex;
+  margin-bottom: 10px;
 
+}
+.title-item {
+  flex:1;
+
+}
+.title-item-grow {
+  flex-grow:1;
+  Display: row;
+  display:flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+
+
+}
 /* logo */
 .logo {
+ max-width: 90px;
+ display:inline-block;
+ padding-right: 20px;
+
+
+
+
+  /*test
   width: 90px;
   height: 90px;
   float: left;
@@ -69,6 +99,11 @@ nav{
   margin-left: 25%;
   display: flex;
   flex-direction: row;
+  */
+}
+.logo img{
+  width: 100%;
+
 }
 /* Header --Sports */
 h1 {
@@ -76,12 +111,13 @@ h1 {
   font-weight: 300;
   font-size: 72px;
   color: #E0E0E0;
-  margin-top: -10px;
+  margin: 0px;
   padding-top: 0px;
-  display: flex;
   flex-direction: row;
+  display:inline-block;
+  /*flex-grow: 1;
   margin-left: 35%;
-  width: 50%;
+  width: 50%;*/
 }
 
 /* Nav bar text */
@@ -94,7 +130,7 @@ nav ul {
   text-align: center;
   display: inline-block;
   vertical-align: top;
-  margin-top: -42px;
+
 }
 
 nav li {
@@ -113,7 +149,9 @@ nav li a {
 }
 
 /* Add a gray right border to all list items, except the last item (last-child) */
-
+li {
+  border-right: 1.5px solid #bbb;
+}
 
 li:last-child {
   border-right: none;
@@ -411,3 +449,7 @@ html {
 .jointeam {
   flex: 1;
 }
+.footercolor{
+  background-color: black;
+  padding-bottom: 10px;
+  }
